fixed logo spacing on mobile

--- a/ConsensusIO/web/static/web/index.css
+++ b/ConsensusIO/web/static/web/index.css
@@ -172,6 +172,7 @@ a:active{
         font-size: 10vw;
     }
     .img{
+        top:12%;
         width: 6em;
     }
     .box img{
