--- a/ConsensusIO/web/static/web/search.css
+++ b/ConsensusIO/web/static/web/search.css
@@ -394,6 +394,7 @@ a{
     width: 25vw;
 }
     .img{
+        top:12%;
         width: 6em;
     }
     #main-footer{
